--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
         <div class="historyCalc">History</div>
       </div>
       <div class="buttons">
-        <button onclick="clearCC()">AC</button>
-        <button onclick="appendNegative('-')">+/-</button>
-        <button onclick="squareRoot()">√x</button>
-        <button class="operations" onclick="appendOperation('+')">+</button>
-        <button onclick="appendNumber('7')">7</button>
-        <button onclick="appendNumber('8')">8</button>
-        <button onclick="appendNumber('9')">9</button>
-        <button class="operations" onclick="appendOperation('-')">-</button>
-        <button onclick="appendNumber('4')">4</button>
-        <button onclick="appendNumber('5')">5</button>
-        <button onclick="appendNumber('6')">6</button>
-        <button class="operations" onclick="appendOperation('×')">×</button>
-        <button onclick="appendNumber('1')">1</button>
-        <button onclick="appendNumber('2')">2</button>
-        <button onclick="appendNumber('3')">3</button>
-        <button class="operations" onclick="appendOperation('÷')">÷</button>
-        <button onclick="appendNumber('0')">0</button>
-        <button onclick="appendDecimal()">.</button>
-        <button>Ans</button>
-        <button class="equal" onclick="solve()">=</button>
+        <button id="AC" onclick="clearCC()">AC</button>
+        <button id="-" onclick="appendNegative('-')">+/-</button>
+        <button id="√x" onclick="squareRoot()">√x</button>
+        <button id="+" class="operations" onclick="appendOperation('+')">+</button>
+        <button id="7" onclick="appendNumber('7')">7</button>
+        <button id="8" onclick="appendNumber('8')">8</button>
+        <button id="9" onclick="appendNumber('9')">9</button>
+        <button id="-" class="operations" onclick="appendOperation('-')">-</button>
+        <button id="4" onclick="appendNumber('4')">4</button>
+        <button id="5" onclick="appendNumber('5')">5</button>
+        <button id="6" onclick="appendNumber('6')">6</button>
+        <button id="×" class="operations" onclick="appendOperation('×')">×</button>
+        <button id="1" onclick="appendNumber('1')">1</button>
+        <button id="2" onclick="appendNumber('2')">2</button>
+        <button id="3" onclick="appendNumber('3')">3</button>
+        <button id="÷" class="operations" onclick="appendOperation('÷')">÷</button>
+        <button id="0" onclick="appendNumber('0')">0</button>
+        <button id="decimal" onclick="appendDecimal()">.</button>
+        <button id="Ans" onclick="previousAnswer()">Ans</button>
+        <button id="=" class="equal" onclick="solve()">=</button>
       </div>
     </div>
     <script src="main.js"></script>
