--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button id="3" onclick="appendNumber('3')">3</button>
         <button id="÷" class="operations" onclick="appendOperation('÷')">÷</button>
         <button id="0" onclick="appendNumber('0')">0</button>
-        <button id="decimal" onclick="appendDecimal()">.</button>
+        <button id="." onclick="appendDecimal()">.</button>
         <button id="Ans" onclick="previousAnswer()">Ans</button>
         <button id="=" class="equal" onclick="solve()">=</button>
       </div>
